2002-04-25 Baptiste Lepilleur <gaiacrtn@free.fr>

	* src/cppunit/XmlOutputter.cpp: bugfix, use ISO-8859-1 encoding if an
	  empty string is given.

	* src/DllPlugInTester/CommandLineParser.h:
	* src/DllPlugInTester/CommandLineParser.cpp:
	* src/DllPlugInTester/DllPlugInTester.cpp: added option -w to wait for
	  the user to press a key before exiting (Philippe Lavoie patch, 
	  with change).

2002-04-22 Baptiste Lepilleur <gaiacrtn@free.fr>

	* include/cppunit/plugin/DynamicLibraryManagerException.h: removed
	  trailing ',' in enum.

	* examples/ClockerPlugIn/ClockerListener.cpp: bugfix, average test
	  case time computation.

2002-04-21 Baptiste Lepilleur <gaiacrtn@free.fr>

	* bumped version to 1.9.7

	* comitted stuffs I forgot to in 1.9.6.

2002-04-21 Baptiste Lepilleur <gaiacrtn@free.fr>

	* contrib/bc5/bcc-makefile.zip: updated, generic makefile for
	  Borland 5.5, contributed by project cuppa.

	* examples/cppunittest/*Suite.h: integrated Jeffrey Morgan's patch,
	  to remove warning with gcc.

	* release 1.9.6

2002-04-21 Baptiste Lepilleur <gaiacrtn@free.fr>

	* src/DllPlugInTester/makefile.am: removed ld.so from LDADD flags.

	* src/DllPlugInTester/CommandLineParser.h:
	* src/DllPlugInTester/CommandLineParser.cpp: rewrote, fixed problem
	  with double quotes in command line...

	* src/DllPlugInTester/CommandLineParserTest.h:
	* src/DllPlugInTester/CommandLineParserTest.cpp:
	* src/DllPlugInTester/DllPlugInTesterTest.cpp: added, unit tests for
	  CommandLineParser.

	* src/msvc6/TestPlugIn/*: removed.

	* examples/Money/*: added. New 'hello world' example.

	* doc/Money.dox: added. Article that go along with the Money example.

2002-04-21 Baptiste Lepilleur <gaiacrtn@free.fr>

	* THANKS: updated

	* src/cppunit/DynamicLibraryManager.cpp: bugfix: did not pass
	  library name to exception.

	* include/cppunit/TestPath.h:
	* src/cppunit/TestPath.cpp: changed into value object.

	* src/cppunit/BeosDynamicLibraryManager.cpp: integrated patch from